--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
     margin-left:42%;
     margin-top:2%
 }
-h1,hr{
+h1{
     color:#2E4053 
 }
 #about{
@@ -37,6 +37,27 @@ h1,hr{
   
    
 }
+
+.hov:hover{
+  width:200px
+    
+ 
+}
+.pro:hover{
+        background-image:url("https://images.all-free-download.com/images/graphiclarge/blue_background_picture_13_169450.jpg");
+       
+    
+}
+.live{
+    width:40px;
+    margin:20px
+}
+.shad{
+    box-shadow: 5px 10px 8px 10px #888888;
+     border-bottom-right-radius: 200px 120px;
+
+ 
+}
 #coding{
     background-image: linear-gradient(to bottom, #D4EFE0 ,#52BE80   );
     margin-top:2%;
@@ -45,7 +66,17 @@ h1,hr{
   
 }
 .git{
-    width:100%
+    width:100%;
+   
+}
+.shad1{
+    box-shadow: 5px 5px rgba(0, 98, 90, 0.4),
+              10px 10px rgba(0, 98, 90, 0.3),
+              15px 15px rgba(0, 98, 90, 0.2),
+              20px 20px rgba(0, 98, 90, 0.1),
+              25px 25px rgba(0, 98, 90, 0.05);
+    border-radius:300px
+
 }
 /* @media only screen and (max-width: 900px) {
     #coding{
