--- a/styles.css
+++ b/styles.css
@@ -37,12 +37,18 @@ h1{
   
    
 }
+#see{
+    box-shadow: 2px 2px 2px 2px #888888;
+     /* border-bottom-right-radius: 200px 120px; */
+     border-radius: 35%;
 
-.hov:hover{
+}
+
+/* .hov:hover{
   width:200px
     
  
-}
+} */
 .pro:hover{
         background-image:url("https://images.all-free-download.com/images/graphiclarge/blue_background_picture_13_169450.jpg");
        
