--- a/styles.css
+++ b/styles.css
@@ -80,8 +80,8 @@ box-shadow: inset 26px 26px 55px #197053,
     /* //background-color:#74dfa3; */
 border-radius: 50px;
 background: linear-gradient(145deg, #34e7ab, #2cc290);
-box-shadow:  20px 20px 37px #145640, 
-             -20px -20px 37px #4effff;
+/* box-shadow:  20px 20px 37px #145640, 
+             -20px -20px 37px #4effff; */
 
 }
 .live{
@@ -106,12 +106,7 @@ box-shadow:  20px 20px 37px #145640,
    
 }
 .shad1{
-    /* box-shadow: 5px 5px rgba(0, 98, 90, 0.4),
-              10px 10px rgba(0, 98, 90, 0.3),
-              15px 15px rgba(0, 98, 90, 0.2),
-              20px 20px rgba(0, 98, 90, 0.1),
-              25px 25px rgba(0, 98, 90, 0.05);
-    border-radius:300px */
+ 
        box-shadow: 10px 10px rgba(0, 98, 90, 0.4),
               15px 15px rgba(0, 98, 90, 0.3),
               20px 20px rgba(0, 98, 90, 0.2),
@@ -166,4 +161,7 @@ box-shadow:  20px 20px 37px #145640,
   background:#31d8a0;
   border:none;
   outline:none
+}
+body{
+  width:100%
 }
