--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 
-#photo{
+#home{
     width:260px;
     height:260px;
     border-radius:50%;
@@ -155,10 +155,7 @@ background:linear-gradient(145deg,#F1948A,#41CAFD )
         margin-left:35%
     }
 }
-#project {
-    min-height: 100vh;
-    
-}
+
 
    
 #projCol{
@@ -174,4 +171,30 @@ background:linear-gradient(145deg,#F1948A,#41CAFD )
 .fit{
   width:98%;
   margin-left:8%
+}
+.navbar{
+  background-color: #66B0CC;
+  height:60px;
+  display: flex;
+  justify-content: center;
+}
+.navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 4px 16px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size:20px
+}
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+#last-item{
+  margin-bottom: 40px;
+}
+.container{
+  margin-top:40px
 }
